--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,11 +15,14 @@
   <%= label_tag :zip %>
   <%= text_field_tag :zip %><br>
 
-  <%= label_tag :phone %>
-  <%= text_field_tag :phone %><br>
+  <%= label_tag :email %>
+  <%= text_field_tag :email %><br>
 
-  <%= label_tag :description %>
-  <%= text_field_tag :description %><br>
+  <%= label_tag :password %>
+  <%= text_field_tag :password %><br>
+
+  <%= label_tag :password_confirmation %>
+  <%= text_field_tag :password_confirmation %><br>
 
   <%= submit_tag "Submit", class: "button"%>
 <% end %>
