--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,13 +16,13 @@
   <%= text_field_tag :zip %><br>
 
   <%= label_tag :email %>
-  <%= text_field_tag :email %><br>
+  <%= email_field_tag :email %><br>
 
   <%= label_tag :password %>
-  <%= text_field_tag :password %><br>
+  <%= password_field_tag :password %><br>
 
   <%= label_tag :password_confirmation %>
-  <%= text_field_tag :password_confirmation %><br>
+  <%= password_field_tag :password_confirmation %><br>
 
   <%= submit_tag "Submit", class: "button"%>
 <% end %>
