--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,6 +6,7 @@
 <% end %>
 <section class="grid-container">
   <% @items.each do |item| %>
+  <% if item.active? == true %>
     <section class = "grid-item" id= 'item-<%=item.id%>'>
       <h2> <%=link_to item.name, "/items/#{item.id}" %> </h2>
       <p>Sold by: <%=link_to item.merchant.name, "/merchants/#{item.merchant.id}" %></p>
@@ -22,4 +23,5 @@
       <% end %>
     </section>
     <% end %>
+   <% end %> 
 </section>
