--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,31 @@
 <h1> Register As A New User </h1>
-<%= form_tag '/register' do %>
-  <%= label_tag :name %>
-  <%= text_field_tag :name %><br>
 
-  <%= label_tag :address %>
-  <%= text_field_tag :address %><br>
+  <%= form_for model: @new_user, url: "/register" do %>
+<%= binding.pry %>
+    <%= label_tag :name %>
+    <%= text_field_tag :name%><br>
 
-  <%= label_tag :city %>
-  <%= text_field_tag :city %><br>
+    <%= label_tag :address %>
+    <%= text_field_tag :address %><br>
 
-  <%= label_tag :state %>
-  <%= text_field_tag :state %><br>
+    <%= label_tag :city %>
+    <%= text_field_tag :city %><br>
 
-  <%= label_tag :zip %>
-  <%= text_field_tag :zip %><br>
+    <%= label_tag :state %>
+    <%= text_field_tag :state %><br>
 
-  <%= label_tag :email %>
-  <%= email_field_tag :email %><br>
+    <%= label_tag :zip %>
+    <%= text_field_tag :zip %><br>
 
-  <%= label_tag :password %>
-  <%= password_field_tag :password %><br>
+    <%= label_tag :email %>
+    <%= email_field_tag :email %><br>
 
-  <%= label_tag :password_confirmation %>
-  <%= password_field_tag :password_confirmation %><br>
+    <%= label_tag :password %>
+    <%= password_field_tag :password %><br>
 
-  <%= submit_tag "Submit", class: "button"%>
+    <%= label_tag :password_confirmation %>
+    <%= password_field_tag :password_confirmation %><br>
+
+    <%= submit_tag "Submit", class: "button"%>
+
 <% end %>
