--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,20 @@
 <h1> Register As A New User </h1>
 
-  <%= form_for model: @new_user, url: "/register" do %>
-<%= binding.pry %>
+  <%= form_tag "/register" do %>
     <%= label_tag :name %>
-    <%= text_field_tag :name%><br>
+    <%= text_field_tag :name, @user.name %><br>
 
     <%= label_tag :address %>
-    <%= text_field_tag :address %><br>
+    <%= text_field_tag :address, @user.address %><br>
 
     <%= label_tag :city %>
-    <%= text_field_tag :city %><br>
+    <%= text_field_tag :city, @user.city %><br>
 
     <%= label_tag :state %>
-    <%= text_field_tag :state %><br>
+    <%= text_field_tag :state, @user.state %><br>
 
     <%= label_tag :zip %>
-    <%= text_field_tag :zip %><br>
+    <%= text_field_tag :zip, @user.zip %><br>
 
     <%= label_tag :email %>
     <%= email_field_tag :email %><br>
@@ -26,6 +25,8 @@
     <%= label_tag :password_confirmation %>
     <%= password_field_tag :password_confirmation %><br>
 
-    <%= submit_tag "Submit", class: "button"%>
+    <%= submit_tag "Submit" %>
+
+    <%# <%= submit "Submit", class: "button"%>
 
 <% end %>
