--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
       <%= link_to "All Merchants", "/merchants"%>
       <%= link_to "All Items", "/items"%>
       <%= link_to "Cart: #{cart.total_items}", "/cart" %>
-      <%= link_to "Register", "/register"%>
-      <% if session[:user_id] != nil %>
+      <% if current_user %>
         <%= link_to "Log Out", "/logout" %>
       <% else %>
+        <%= link_to "Register", "/register"%>
         <%= link_to "Log In", "/login" %>
       <% end %>
 
