Add link to profile if logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%= link_to "All Items", "/items"%>
       <%= link_to "Cart: #{cart.total_items}", "/cart" %>
       <% if current_user %>
+        <%= link_to "My Profile", "/profile" %>
         <%= link_to "Log Out", "/logout" %>
       <% else %>
         <%= link_to "Register", "/register"%>
