--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @user.name %></h1>
+<h1><%= "You are logged in as #{@user.name}" %></h1>
 
 <h3>Name: <%= @user.name %></h3>
 <h3>Address: <%= @user.address %></h3>
