--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= link_to "All Items", "/items"%>
       <%= link_to "Cart: #{cart.total_items}", "/cart" %>
       <% if current_merchant_user? %>
-        <%= link_to "Merchant Dashboard", "/merchants/dashboard" %>
+        <%= link_to "Merchant Dashboard", "/merchant" %>
         <%= link_to "Log Out", "/logout" %>
       <% elsif current_user %>
         <%= link_to "My Profile", "/profile" %>
