--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
       <%= link_to "All Merchants", "/merchants"%>
       <%= link_to "All Items", "/items"%>
       <%= link_to "Cart: #{cart.total_items}", "/cart" %>
-      <% if current_merchant_user? %>
+      <% if current_admin_user? %>
+        <%= link_to "Admin Dashboard", "/admin" %>
+        <%= link_to "Log Out", "/logout" %>
+      <% elsif current_merchant_user? %>
         <%= link_to "Merchant Dashboard", "/merchant" %>
         <%= link_to "Log Out", "/logout" %>
       <% elsif current_user %>
