Create link for edit password

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,4 @@
 <h3>Zip: <%= @user.zip %></h3>
 <h3>Email: <%= @user.email %></h3>
 <%= link_to "Edit Your Profile", "/profile/edit" %>
+<%= link_to "Edit Your Password", "/profile/password" %>
