Adds iteration for view of most popular items
Co-Authored-By: Ray <itemniner@users.noreply.github.com>

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -23,5 +23,12 @@
       <% end %>
     </section>
     <% end %>
-   <% end %> 
+   <% end %>
 </section>
+
+<%@items.top_five.each do |item| %>
+  <section class = "top five_<%="#{item.id}"%>">
+     Item Name: <%=item.name %>
+     Quantity: <%= item.quantity %>
+  </section>
+<%end %>
