--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,9 +26,18 @@
    <% end %>
 </section>
 
-<%@items.top_five.each do |item| %>
-  <section class = "top five_<%="#{item.id}"%>">
-     Item Name: <%=item.name %>
-     Quantity: <%= item.quantity %>
-  </section>
+<h2>Most Popular Items </h2>
+<section id="top_five">
+<% @items.top_five.each do |item| %>
+     <p>Item Name: <%=item.name %></p>
+     <p>Quantity: <%= item.quantity %></p>
 <%end %>
+</section>
+
+<h2>Least Popular Items</h2>
+<section id= "bottom_five">
+  <% @items.bottom_five.each do |item| %>
+    <p>Item Name: <%= item.name %></p>
+    <p>Quantity: <%= item.quantity %></p>
+  <%end %>
+</section>
