Adds button to increment card

--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -30,8 +30,11 @@
       </td>
       <td>
         <center>
+          <section id="item-<%=item.id%>">
           <p><%=quantity%></p>
-          <p><%= link_to "Remove", "/cart/#{item.id}",method: :delete %></p>
+          <p><%= button_to "Add Item", "/cart/#{item.id}", method: :post %></p>
+          <p><%= link_to "Remove", "/cart/#{item.id}", method: :delete %></p>
+          </section>
         </center>
         </td>
       <td>
