--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -1,5 +1,9 @@
 <h1>Cart</h1>
 
+<% if @user == nil %>
+<h2> Login needed to Checkout </h2>
+<% end %>
+
 <% if !@items.empty? %>
 <center>
 <table class = "cart-items">
