--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,3 +8,4 @@
 <h3>Email: <%= @user.email %></h3>
 <%= link_to "Edit Your Profile", "/profile/edit" %>
 <%= link_to "Edit Your Password", "/profile/password" %>
+<%= link_to "My Orders", "/profile/orders" %>
