--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -17,12 +17,15 @@
     </tr>
   </table>
 </section>
-
+<h5>Order: <%= @order.id %></h5>
+<h5>Order Status: <%= @order.status %></h5>
 <h1 align = "center">Order Info</h1>
 <center>
   <table>
     <tr>
+      <th>Image</th>
       <th>Item</th>
+      <th>Description</th>
       <th>Sold By</th>
       <th>Price</th>
       <th>Quantity</th>
@@ -31,7 +34,9 @@
   <% @order.item_orders.each do |item_order|%>
     <tr>
     <section id = "item-<%=item_order.item_id%>">
+        <td><p><img src=<%= item_order.item.image %>></p></td>
         <td><p><%=link_to item_order.item.name, "/items/#{item_order.item_id}"%></p></td>
+        <td><p><%= item_order.item.description%></p></td>
         <td><p><%= link_to item_order.item.merchant.name, "/merchants/#{item_order.item.merchant.id}"%></p></td>
         <td><p><%= number_to_currency(item_order.price)%></p></td>
         <td><p><%= item_order.quantity%></p></td>
@@ -42,8 +47,10 @@
 </table>
 
 <section id="grandtotal">
+  <p>Total Quantity Ordered: <%= @order.items.count %></p>
   <p>Total: <%=number_to_currency(@order.grandtotal)%></p>
 </section>
 <section id="datecreated">
-  <p> <%= @order.created_at%></p>
+  <p> Ordered at:<%= @order.created_at%></p>
+  <p> Last updated:<%= @order.updated_at %></p>
 </section>
