--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -32,7 +32,7 @@
         <center>
           <section id="item-<%=item.id%>">
           <p><%=quantity%></p>
-          <p><%= button_to "Add Item", "/cart/#{item.id}", method: :post %></p>
+          <p><%= button_to "Add Item", "/cart/#{item.id}?add_subtract=add", method: :patch %></p>
           <p><%= link_to "Remove", "/cart/#{item.id}", method: :delete %></p>
           </section>
         </center>
