Update view to match specs

--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -1,2 +1,2 @@
-<h2><%= @merchant.name %></h2>
-<p><%= @merchant.address %> <%= @merchant.city %>, <%= @merchant.state %> <%= @merchant.zip %></p>
+<h2><%= @user.merchant.name %></h2>
+<p><%= @user.merchant.address %> <%= @user.merchant.city %>, <%= @user.merchant.state %> <%= @user.merchant.zip %></p>
