Add link to view items

--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -1,2 +1,3 @@
 <h2><%= @user.merchant.name %></h2>
 <p><%= @user.merchant.address %> <%= @user.merchant.city %>, <%= @user.merchant.state %> <%= @user.merchant.zip %></p>
+<%= link_to "My Shop Items", "/merchant/items" %>
