--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -56,5 +56,5 @@
 </section>
 
 <section id="order-cancel">
-  <%= button_to "Cancel Order", "/profile/orders/#{@order.id}", method: :cancel %>
+  <%= button_to "Cancel Order", "/profile/orders/#{@order.id}", method: :delete %>
 </section>
