Add section for order status

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -17,9 +17,11 @@
     </tr>
   </table>
 </section>
-<h5>Order: <%= @order.id %></h5>
-<h5>Order Status: <%= @order.status %></h5>
-<h1 align = "center">Order Info</h1>
+<section id="order-status">
+  <h5>Order: <%= @order.id %></h5>
+  <h5>Order Status: <%= @order.status %></h5>
+  <h1 align = "center">Order Info</h1>
+</section>
 <center>
   <table>
     <tr>
