Update to use existing route

--- a/app/views/users/password_edit.html.erb
+++ b/app/views/users/password_edit.html.erb
@@ -1,5 +1,5 @@
 <h1> Update Your Profile </h1>
-<%= form_tag '/profile/password_edit', method: :patch do %>
+<%= form_tag '/profile/edit', method: :patch do %>
   <%= label_tag :password %>
   <%= text_field_tag :password %><br>
 
