Refactor to be more RESTful

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1> Update Your Profile </h1>
-<%= form_tag '/profile/edit', method: :patch do %>
+<%= form_tag '/profile', method: :patch do %>
   <%= label_tag :name %>
   <%= text_field_tag :name, "#{@user.name}" %><br>
 
