--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,5 +7,5 @@
 <h3>Zip: <%= @user.zip %></h3>
 <h3>Email: <%= @user.email %></h3>
 <%= link_to "Edit Your Profile", "/profile/edit" %>
-<%= link_to "Edit Your Password", "/profile/password" %>
+<%= link_to "Edit Your Password", "/profile/edit_password" %>
 <%= link_to "My Orders", "/profile/orders" %>
