--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -1,11 +1,11 @@
 <h2><%= @user.merchant.name %></h2>
-<p><%= @user.merchant.address %> <%= @user.merchant.city %>, <%= @user.merchant.state %> <%= @user.merchant.zip %></p>\
+<p><%= @user.merchant.address %> <%= @user.merchant.city %>, <%= @user.merchant.state %> <%= @user.merchant.zip %></p>
 
 <%= link_to "My Shop Items", "/merchant/items" %>
 
 <% @user.merchant.pending_orders.each do | order |%>
 <section id='order-<%= order.id%>'>
-  <p>Item Id: <%=link_to order.id, "/profile/orders/#{order.id}" %></p>
+  <p>Order ID: <%=link_to order.id, "/profile/orders/#{order.id}" %></p>
   <p>Date Created: <%= order.created_at %></p>
   <p>Number of Items In Order: <%= order.items.size %></p>
   <p>Order Total: <%= order.grandtotal %></p>
