--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Admin View</h1>
-<h2>Name: <%= @user.name %></h3>
-<h3>Address: <%= @user.address %></h3>
-<h3>City: <%= @user.city %></h3>
-<h3>State: <%= @user.state %></h3>
-<h3>Zip: <%= @user.zip %></h3>
-<h3>Email: <%= @user.email %></h3>
+<h2>Name: <%= @display_user.name %></h3>
+<h3>Address: <%= @display_user.address %></h3>
+<h3>City: <%= @display_user.city %></h3>
+<h3>State: <%= @display_user.state %></h3>
+<h3>Zip: <%= @display_user.zip %></h3>
+<h3>Email: <%= @display_user.email %></h3>
