--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,58 +1,13 @@
 <h1>Orders</h1>
 
-<section id="packaged-orders">
-  <h3>Packaged Orders</h3>
-  <% @orders.each do |order| %>
-    <% if order.status == "packaged" %>
-      <section id="order-<%= order.id %>">
-        <p>Name: <%= link_to order.user.name , "/admin/users/#{order.user.id}" %></p>
-        <p>Order: <%= order.id %></p>
-        <p>Order Created At: <%= order.created_at %></p>
-        <p>Order Last Updated: <%= order.updated_at %></p>
-        <%= button_to "Ship Order", "/admin/orders/#{order.id}", method: :patch %>
-      </section>
-      <% end %>
-  <% end %>
-</section>
-
-<section id="pending-orders">
-  <h3>Pending Orders</h3>
-  <% @orders.each do |order| %>
-    <% if order.status == "pending" %>
-      <section id="order-<%= order.id %>">
-        <p>Name: <%= link_to order.user.name, "/admin/users/#{order.user.id}" %></p>
-        <p>Order: <%= order.id %></p>
-        <p>Order Created At: <%= order.created_at %></p>
-        <p>Order Last Updated: <%= order.updated_at %></p>
-      </section>
-      <% end %>
-  <% end %>
-</section>
-
-<section id="shipped-orders">
-<h3>Shipped Orders</h3>
 <% @orders.each do |order| %>
-  <% if order.status == "shipped" %>
-    <section id="order-<%= order.id %>">
-      <p>Name: <%= link_to order.user.name, "/admin/users/#{order.user.id}" %></p>
-      <p>Order: <%= order.id %></p>
-      <p>Order Created At: <%= order.created_at %></p>
-      <p>Order Last Updated: <%= order.updated_at %></p>
-    </section>
+  <section id="order-<%= order.id %>">
+    <p>Name:  <%= link_to order.user.name, "/admin/users/#{order.user.id}" %></p>
+    <p>Order ID: <%= order.id %></p>
+    <p>Order Created At: <%= order.created_at %></p>
+    <p>Status: <%= order.status %></p>
+    <% if order.packaged? %>
+      <%= button_to "Ship Order", "/admin/orders/#{order.id}", method: :patch %>
     <% end %>
+  </section>
 <% end %>
-</section>
-
-<section id="cancelled-orders">
-  <h3>Cancelled Orders</h3>
-  <% @orders.each do |order| %>
-    <% if order.status == "cancelled" %>
-      <section id="order-<%= order.id %>">
-        <p>Name: <%= link_to order.user.name, "/admin/users/#{order.user.id}" %></p>
-        <p>Order: <%= order.id %></p>
-        <p>Order Created At: <%= order.created_at %></p>
-        <p>Order Last Updated: <%= order.updated_at %></p>
-      </section>
-      <% end %>
-  <% end %>
-</section>
