--- a/app/views/orders/_show.html.erb
+++ b/app/views/orders/_show.html.erb
@@ -49,7 +49,7 @@
 </table>
 
 <section id="grandtotal">
-  <p>Total Quantity Ordered: <%= @order.items.count %></p>
+  <p>Total Quantity Ordered: <%= @order.quantity_ordered %></p>
   <p>Total: <%=number_to_currency(@order.grandtotal)%></p>
 </section>
 <section id="datecreated">
