--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -5,7 +5,7 @@
 
 <% @merchant.pending_orders.each do | order |%>
 <section id='order-<%= order.id%>'>
-  <p>Order ID: <%=link_to order.id, "/profile/orders/#{order.id}" %></p>
+  <p>Order ID: <%=link_to order.id, "/merchant/orders/#{order.id}" %></p>
   <p>Date Created: <%= order.created_at %></p>
   <p>Number of Items In Order: <%= order.quantity_ordered_from(@merchant) %></p>
   <p>Order Total: <%= order.subtotal_from(@merchant) %></p>
