--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -50,7 +50,7 @@
 </table>
   <p>Total: <%= number_to_currency(cart.total) %></p>
   <p><%= link_to "Empty Cart", "/cart", method: :delete %></p>
-  <p><%= link_to "Checkout", "/orders/new", method: :get %></p>
+  <p><%= link_to "Checkout", "/profile/orders/new", method: :get %></p>
 <% else %>
   <h3 align= "center">Cart is currently empty</h3>
 <% end %>
