Second set of refactors

--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -1,13 +1,1 @@
-<h2><%= @merchant.name %></h2>
-<p><%= @merchant.address %> <%= @merchant.city %>, <%= @merchant.state %> <%= @merchant.zip %></p>
-
-<%= link_to "My Shop Items", "/merchant/items" %>
-
-<% @merchant.pending_orders.each do | order |%>
-<section id='order-<%= order.id%>'>
-  <p>Order ID: <%=link_to order.id, "/merchant/orders/#{order.id}" %></p>
-  <p>Date Created: <%= order.created_at %></p>
-  <p>Number of Items In Order: <%= order.quantity_ordered_from(@merchant) %></p>
-  <p>Order Total: <%= order.subtotal_from(@merchant) %></p>
-</section><br>
-<%end  %>
+<%= render "index" %>
