--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,41 +1,1 @@
-<% if @merchant %>
-  <h1><%= link_to @merchant.name, "/merchants/#{@merchant.id}"%><span> Items</span></h1>
-  <p align="center"><%= link_to "Add New Item", "/merchants/#{@merchant.id}/items/new" %></p>
-<% else %>
-  <h1>All Items</h1>
-<% end %>
-<section class="grid-container">
-  <% @items.each do |item| %>
-    <section class = "grid-item" id= 'item-<%=item.id%>'>
-      <h2> <%=link_to item.name, "/items/#{item.id}" %> </h2>
-      <p>Sold by: <%=link_to item.merchant.name, "/merchants/#{item.merchant.id}" %></p>
-      <%= link_to image_tag(item.image), "/items/#{item.id}", id: "#{item.id}-image" %>
-      <p> <%= item.description unless @merchant%> </p>
-      <p>Price: <%=number_to_currency(item.price) %> </p>
-      <p>Inventory: <%= item.inventory %> </p>
-      <% if !@merchant %>
-      <% end %>
-      <% if item.active? %>
-        <p>Active</p>
-      <% else %>
-        <p>Inactive</p>
-      <% end %>
-    </section>
-  <% end %>
-</section>
-
-<h2>Most Popular Items </h2>
-<section id="top_five">
-<% @items.by_popularity(5, "DESC").each do |item| %>
-     <p>Item Name: <%=item.name %></p>
-     <p>Quantity: <%= item.quantity %></p>
-<%end %>
-</section>
-
-<h2>Least Popular Items</h2>
-<section id= "bottom_five">
-  <% @items.by_popularity(5, "ASC").each do |item| %>
-    <p>Item Name: <%= item.name %></p>
-    <p>Quantity: <%= item.quantity %></p>
-  <%end %>
-</section>
+<%= render "index" %>
