--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -30,7 +30,7 @@
         </p>
       </td>
       <td>
-        <p><%=number_to_currency(item.price)%></p>
+        <p><%=number_to_currency(item.price/100.to_f)%></p>
       </td>
       <td>
         <center>
@@ -43,12 +43,12 @@
         </center>
         </td>
       <td>
-        <p><%=number_to_currency(cart.subtotal(item))%></p>
+        <p><%=number_to_currency(cart.subtotal(item)/100.to_f)%></p>
     </td>
     </tr>
   <% end %>
 </table>
-  <p>Total: <%= number_to_currency(cart.total) %></p>
+  <p>Total: <%= number_to_currency(cart.total/100.to_f) %></p>
   <p><%= link_to "Empty Cart", "/cart", method: :delete %></p>
   <p><%= link_to "Checkout", "/profile/orders/new", method: :get %></p>
 <% else %>
