--- a/app/views/merchant/orders/show.html.erb
+++ b/app/views/merchant/orders/show.html.erb
@@ -18,8 +18,8 @@
   </table>
 </section>
 <section id="order-status">
-  <h5>Order: <%= @order.id %></h5>
-  <h5>Order Status: <%= @order.status %></h5>
+  <h2>Order ID: <%= @order.id %></h2>
+  <h2>Order Status: <%= @order.status.capitalize %></h2>
   <h1 align = "center">Order Info</h1>
 </section>
 <center>
@@ -40,9 +40,9 @@
         <td><p><%=link_to item_order.item.name, "/items/#{item_order.item_id}"%></p></td>
         <td><p><%= item_order.item.description%></p></td>
         <td><p><%= link_to item_order.item.merchant.name, "/merchants/#{item_order.item.merchant.id}"%></p></td>
-        <td><p><%= number_to_currency(item_order.price)%></p></td>
+        <td><p><%= number_to_currency(item_order.price/100.to_f)%></p></td>
         <td><p><%= item_order.quantity%></p></td>
-        <td><p><%= number_to_currency(item_order.subtotal)%></p></td>
+        <td><p><%= number_to_currency(item_order.subtotal/100.to_f)%></p></td>
       </section>
     </tr>
   <% end %>
@@ -50,7 +50,7 @@
 
 <section id="grandtotal">
   <p>Total Quantity Ordered: <%= @order.items.count %></p>
-  <p>Total: <%=number_to_currency(@order.grandtotal)%></p>
+  <p>Total: <%=number_to_currency(@order.grandtotal/100.to_f)%></p>
 </section>
 <section id="datecreated">
   <p> Ordered at:<%= @order.created_at%></p>
