--- a/app/views/user/orders/_show.html.erb
+++ b/app/views/user/orders/_show.html.erb
@@ -40,9 +40,9 @@
         <td><p><%=link_to item_order.item.name, "/items/#{item_order.item_id}"%></p></td>
         <td><p><%= item_order.item.description%></p></td>
         <td><p><%= link_to item_order.item.merchant.name, "/merchants/#{item_order.item.merchant.id}"%></p></td>
-        <td><p><%= number_to_currency(item_order.price)%></p></td>
+        <td><p><%= number_to_currency(item_order.price/100.to_f)%></p></td>
         <td><p><%= item_order.quantity%></p></td>
-        <td><p><%= number_to_currency(item_order.subtotal)%></p></td>
+        <td><p><%= number_to_currency(item_order.subtotal/100.to_f)%></p></td>
       </section>
     </tr>
   <% end %>
@@ -50,7 +50,7 @@
 
 <section id="grandtotal">
   <p>Total Quantity Ordered: <%= @order.quantity_ordered %></p>
-  <p>Total: <%=number_to_currency(@order.grandtotal)%></p>
+  <p>Total: <%=number_to_currency(@order.grandtotal/100.to_f)%></p>
 </section>
 <section id="datecreated">
   <p> Ordered at:<%= @order.created_at%></p>
@@ -58,7 +58,7 @@
 </section>
 
 <section id="order-cancel">
-  <% if @order.pending? %>
+  <% if !@order.shipped? && !@order.cancelled? %>
     <%= button_to "Cancel Order", "/profile/orders/#{@order.id}", method: :patch %>
   <% end %>
 </section>
