--- a/app/views/user/orders/new.html.erb
+++ b/app/views/user/orders/new.html.erb
@@ -11,15 +11,15 @@
   <% cart.items.each do |item, quantity| %>
     <tr id='order-item-<%= item.id%>'>
       <td><h2><%= link_to item.name, "/items/#{item.id}" %></h2></td>
-      <td><p><%= number_to_currency(item.price) %></p></td>
+      <td><p><%= number_to_currency(item.price/100.to_f) %></p></td>
       <td><p><%= quantity %></p></td>
-      <td><p><%= number_to_currency(cart.subtotal(item)) %></p><td>
+      <td><p><%= number_to_currency(cart.subtotal(item)/100.to_f) %></p><td>
       <td><p><%= link_to item.merchant.name, "/merchants/#{item.merchant_id}" %></p></td>
       <td><p><%= item.inventory %> in stock</p></td>
     </tr>
   <% end %>
 </table>
-<h3 align = "right">Total: <%= number_to_currency(cart.total)%></h3>
+<h3 align = "right">Total: <%= number_to_currency(cart.total/100.to_f)%></h3>
 <center>
   <h2>Shipping Info:</h2>
   <%= form_tag "/orders", method: :create do %>
