--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,9 @@
 <h1><%= "You are logged in as #{@user.name}" %></h1>
 
-<h3>Name: <%= @user.name %></h3>
-<h3>Address: <%= @user.address %></h3>
-<h3>City: <%= @user.city %></h3>
-<h3>State: <%= @user.state %></h3>
-<h3>Zip: <%= @user.zip %></h3>
-<h3>Email: <%= @user.email %></h3>
+<h2><%= @user.name %></h2>
+<h3><%= @user.email %></h3>
+<p><%= @user.address %></p>
+<p><%= @user.city %>, <%= @user.state %> <%= @user.zip %></p>
 <%= link_to "Edit Your Profile", "/profile/edit" %>
 <%= link_to "Edit Your Password", "/profile/edit_password" %>
 <%= link_to "My Orders", "/profile/orders" %>
