--- a/app/views/user/orders/_show.html.erb
+++ b/app/views/user/orders/_show.html.erb
@@ -18,8 +18,8 @@
   </table>
 </section>
 <section id="order-status">
-  <h2>Order: <%= @order.id %></h5>
-  <h2>Order Status: <%= @order.status %></h5>
+  <h2>Order ID: <%= @order.id %></h2>
+  <h2>Order Status: <%= @order.status.capitalize %></h2>
   <h1 align = "center">Order Info</h1>
 </section>
 <center>
