--- a/app/views/merchant/orders/show.html.erb
+++ b/app/views/merchant/orders/show.html.erb
@@ -27,19 +27,15 @@
     <tr>
       <th>Image</th>
       <th>Item</th>
-      <th>Description</th>
-      <th>Sold By</th>
       <th>Price</th>
       <th>Quantity</th>
       <th>Subtotal</th>
     </tr>
-  <% @order.item_orders.each do |item_order|%>
+  <% @item_orders.each do |item_order|%>
     <tr>
     <section id = "item-<%=item_order.item_id%>">
         <td><p><img src=<%= item_order.item.image %>></p></td>
         <td><p><%=link_to item_order.item.name, "/items/#{item_order.item_id}"%></p></td>
-        <td><p><%= item_order.item.description%></p></td>
-        <td><p><%= link_to item_order.item.merchant.name, "/merchants/#{item_order.item.merchant.id}"%></p></td>
         <td><p><%= number_to_currency(item_order.price/100.to_f)%></p></td>
         <td><p><%= item_order.quantity%></p></td>
         <td><p><%= number_to_currency(item_order.subtotal/100.to_f)%></p></td>
@@ -47,16 +43,3 @@
     </tr>
   <% end %>
 </table>
-
-<section id="grandtotal">
-  <p>Total Quantity Ordered: <%= @order.items.count %></p>
-  <p>Total: <%=number_to_currency(@order.grandtotal/100.to_f)%></p>
-</section>
-<section id="datecreated">
-  <p> Ordered at:<%= @order.created_at%></p>
-  <p> Last updated:<%= @order.updated_at %></p>
-</section>
-
-<section id ="order-fulfill">
-  <%= button_to "Fulfill Order", "/merchant/orders/#{@order.id}", method: :patch %>
-</section>
