--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,13 +1,15 @@
 <h1>Orders</h1>
 
-<% @orders.each do |order| %>
-  <section id="order-<%= order.id %>">
-    <p>Name:  <%= link_to order.user.name, "/admin/users/#{order.user.id}" %></p>
-    <p>Order ID: <%= order.id %></p>
-    <p>Order Created At: <%= order.created_at %></p>
-    <p>Status: <%= order.status %></p>
-    <% if order.packaged? %>
-      <%= button_to "Ship Order", "/admin/orders/#{order.id}", method: :patch %>
-    <% end %>
-  </section>
-<% end %>
+<section class="grid-container">
+  <% @orders.each do |order| %>
+    <section class="grid-item" id="order-<%= order.id %>">
+      <h4><%= link_to order.user.name, "/admin/users/#{order.user.id}" %></h4>
+      <p>Order ID: <%= order.id %></p>
+      <p>Created: <%= order.created_at %></p>
+      <p>Status: <%= order.status.capitalize %></p>
+      <% if order.packaged? %>
+        <%= button_to "Ship Order", "/admin/orders/#{order.id}", method: :patch %>
+      <% end %>
+    </section>
+  <% end %>
+</section>
