--- a/app/views/user/orders/index.html.erb
+++ b/app/views/user/orders/index.html.erb
@@ -3,12 +3,12 @@
 <section class="grid-container">
   <% @orders.each do |order| %>
     <section class="grid-item" id="order-<%= order.id %>">
-      <h4><%= link_to "Order: #{order.id}", "/profile/orders/#{order.id}" %></h4>
-      <p>Created at: <%= order.created_at %></p>
-      <p>Last updated: <%= order.updated_at %></p>
-      <p>Total items: <%= order.quantity_ordered %></p>
-      <p>Total price: <%= number_to_currency(order.grandtotal/100.to_f) %></p>
-      <h4>Order status: <%= order.status %></h4>
+      <h4><%= link_to "Order ID: #{order.id}", "/profile/orders/#{order.id}" %></h4>
+      <p>Created At: <%= order.created_at %></p>
+      <p>Last Updated: <%= order.updated_at %></p>
+      <p>Total Items: <%= order.quantity_ordered %></p>
+      <p>Total Price: <%= number_to_currency(order.grandtotal/100.to_f) %></p>
+      <h4>Order Status: <%= order.status.capitalize %></h4>
     </section>
   <% end %>
 </section>
