--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -5,7 +5,7 @@
   <h1>All Items</h1>
 <% end %>
 <section class="grid-container">
-  <% @items.each do |item| %>
+  <% @items.reload.each do |item| %>
     <section class = "grid-item" id= 'item-<%=item.id%>'>
       <h2> <%=link_to item.name, "/items/#{item.id}" %> </h2>
       <p>Sold by: <%=link_to item.merchant.name, "/merchants/#{item.merchant.id}" %></p>
@@ -17,6 +17,9 @@
         <p>Active</p>
       <% else %>
         <p>Inactive</p>
+      <% end %>
+      <% if @merchant %>
+          <p><%= link_to "Delete Item", merchant_dash_item_path(item), method: :delete if item.no_orders?%></p>
       <% end %>
     </section>
   <% end %>
