Moves items variable reload

--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -4,8 +4,9 @@
 <% else %>
   <h1>All Items</h1>
 <% end %>
+  <% @items.reload %>
 <section class="grid-container">
-  <% @items.reload.each do |item| %>
+  <% @items.each do |item| %>
     <section class = "grid-item" id= 'item-<%=item.id%>'>
       <h2> <%=link_to item.name, "/items/#{item.id}" %> </h2>
       <p>Sold by: <%=link_to item.merchant.name, "/merchants/#{item.merchant.id}" %></p>
