Create id for merchant in index list

--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -2,7 +2,7 @@
 <p align="center"><%= link_to "New Merchant", "/merchants/new" %></p>
 <section class = "grid-container">
   <% @merchants.each do |merchant|%>
-    <section class = "grid-item">
+    <section id="merchant-<%= merchant.id %>" class="grid-item" >
       <% if current_admin_user? %>
         <h2><%= link_to merchant.name, "/admin/merchants/#{merchant.id}" %></h2>
       <% else %>
