Add button for view for story 42

--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -10,6 +10,7 @@
     <p>Inventory: <%= item.inventory %> </p>
     <% if item.active? %>
       <p>Active</p>
+      <%= button_to "Deactivate", "/merchant/items/#{item.id}", method: :patch %>
     <% else %>
       <p>Inactive</p>
     <% end %>
