Add conditional for the button to enable disable merchant

--- a/app/views/merchants/_index.html.erb
+++ b/app/views/merchants/_index.html.erb
@@ -5,7 +5,11 @@
     <section id="merchant-<%= merchant.id %>" class="grid-item" >
       <% if current_admin_user? %>
         <h2><%= link_to merchant.name, "/admin/merchants/#{merchant.id}" %></h2>
-        <%= button_to "Disable", "/admin/merchants/#{merchant.id}", method: :patch %>
+          <% if merchant.active == true %>
+            <%= button_to "Disable", "/admin/merchants/#{merchant.id}", method: :patch %>
+          <% else %>
+            <%= button_to "Enable", "/admin/merchants/#{merchant.id}", method: :patch %>
+          <% end %>
       <% else %>
         <h2><%=link_to merchant.name, "/merchants/#{merchant.id}"%></h2>
       <% end %>
