--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -1,10 +1,11 @@
 <% if @merchant %>
   <h1><%= link_to @merchant.name, "/merchants/#{@merchant.id}"%><span> Items</span></h1>
-  <p align="center"><%= link_to "Add New Item", "/merchants/#{@merchant.id}/items/new" %></p>
+  <p align="center"><%= link_to "Add New Item", new_merchant_dash_item_path %></p>
 <% else %>
   <h1>All Items</h1>
 <% end %>
   <% @items.reload %>
+
 <section class="grid-container">
   <% @items.each do |item| %>
     <section class = "grid-item" id= 'item-<%=item.id%>'>
