--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -10,10 +10,10 @@
     <p>Inventory: <%= item.inventory %> </p>
     <% if item.active? %>
       <p>Active</p>
-      <%= link_to "Deactivate", "/merchant/items/#{item.id}", method: :patch if current_merchant_user %>
+      <%= link_to "Deactivate", "/merchant/items/#{item.id}", method: :patch if current_merchant_user? %>
     <% else %>
       <p>Inactive</p>
-      <%= link_to "Activate", "/merchant/items/#{item.id}", method: :patch if current_merchant_user %>
+      <%= link_to "Activate", "/merchant/items/#{item.id}", method: :patch if current_merchant_user? %>
     <% end %>
   </section>
 <% end %>
