--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,1 +1,14 @@
-<%# No content here yet. Specs at the time of creation only specified checking for correct path  %>
+<% @users.each do |user| %>
+<center>
+<h1><%= link_to "#{user.name}", "/admin/users/#{user.id}" %></h2>
+<h2>Registered at: <%= user.created_at %></h3>
+<h2>User Role: <%= user.role %></h3>
+
+<h3>====User Info====</h3>
+<h4>E-mail: <%= user.email %></h4>
+<p>Address:</p>
+<p><%= user.address %></p>
+<p><%= user.city %>, <%= user.state %> <%= user.zip %></p>
+<h3>================</h3>
+<% end %>
+<center>
