Add view of city and state for admins to the partial of merchants index

--- a/app/views/merchants/_index.html.erb
+++ b/app/views/merchants/_index.html.erb
@@ -4,6 +4,8 @@
   <% @merchants.each do |merchant|%>
     <section id="merchant-<%= merchant.id %>" class="grid-item" >
       <% if current_admin_user? %>
+        <h2>City: <%= merchant.city %></h2>
+        <h2>State: <%= merchant.state %></h2>
         <h2><%= link_to merchant.name, "/admin/merchants/#{merchant.id}" %></h2>
           <% if merchant.active == true %>
             <%= button_to "Disable", "/admin/merchants/#{merchant.id}", method: :patch %>
