--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -1,6 +1,6 @@
 <% if @merchant %>
   <h1><%= link_to @merchant.name, "/merchants/#{@merchant.id}"%><span> Items</span></h1>
-  <p align="center"><%= link_to "Add New Item", new_merchant_dash_item_path if current_merchant_user? %></p>
+  <p align="center"><%= link_to "Add New Item", new_merchant_dash_item_path if current_merchant_user? && current_employee?(@merchant.id) %></p>
 <% else %>
   <h1>All Items</h1>
 <% end %>
@@ -17,13 +17,13 @@
       <p>Inventory: <%= item.inventory %> </p>
       <% if item.active? %>
         <p>Active</p>
-        <%= link_to "Deactivate", "/merchant/items/#{item.id}", method: :patch if current_merchant_user? %>
+        <%= link_to "Deactivate", "/merchant/items/#{item.id}", method: :patch if current_merchant_user? && current_employee?(@merchant.id) %>
       <% else %>
         <p>Inactive</p>
-        <%= link_to "Activate", "/merchant/items/#{item.id}", method: :patch if current_merchant_user? %>
+        <%= link_to "Activate", "/merchant/items/#{item.id}", method: :patch if current_merchant_user? && current_employee?(@merchant.id) %>
       <% end %>
       <% if @merchant %>
-          <p><%= link_to "Delete Item", merchant_dash_item_path(item), method: :delete if item.no_orders? && current_merchant_user? %></p>
+          <p><%= link_to "Delete Item", merchant_dash_item_path(item), method: :delete if item.no_orders? && current_merchant_user? && current_employee?(@merchant.id) %></p>
       <% end %>
     </section>
   <% end %>
