--- a/app/views/merchant/items/new.html.erb
+++ b/app/views/merchant/items/new.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: 'form' %>
+<%= form_for [@merchant, @item], :url => { :action => "create" } do |form| %>
+  <%= render partial: 'form', locals: { f: form } %>
+<% end %>
