--- a/app/views/merchant/items/_form.html.erb
+++ b/app/views/merchant/items/_form.html.erb
@@ -1,16 +1,16 @@
 
 <%= f.label :name %>
-<%= f.text_field :name%>
+<%= f.text_field :name%> <br>
 
 <%= f.label :description %>
-<%= f.text_field :description %>
+<%= f.text_field :description %> <br>
 
 <%= f.label :price %>
-<%= f.text_field :price %>
+<%= f.text_field :price %><br>
 
 <%= f.label :image %>
-<%= f.text_field :image%>
+<%= f.text_field :image%> <br>
 
 <%= f.label :inventory %>
-<%= f.text_field :inventory %>
-<%= f.submit %>
+<%= f.text_field :inventory %> <br>
+<%= f.submit %> <br>
