--- a/app/views/merchants/_form.html.erb
+++ b/app/views/merchants/_form.html.erb
@@ -1,18 +1,18 @@
 <%= form_for @merchant do |f| %>
   <%= f.label :name %>
-  <%= f.text_field :name%>
+  <%= f.text_field :name%> <br>
 
   <%= f.label :address %>
-  <%= f.text_field :address %>
+  <%= f.text_field :address %> <br>
 
   <%= f.label :city %>
-  <%= f.text_field :city %>
+  <%= f.text_field :city %> <br>
 
   <%= f.label :state %>
-  <%= f.text_field :state %>
+  <%= f.text_field :state %> <br>
 
   <%= f.label :zip %>
-  <%= f.text_field :zip %>
+  <%= f.text_field :zip %> <br>
 
   <%= f.submit %>
 <% end %>
