--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for [@item, @review] do |f| %>
 
   <%= f.label :title%>
-  <%= f.text_field :title%>
+  <%= f.text_field :title%> <br>
   <%= f.label :content%>
-  <%= f.text_field :content %>
+  <%= f.text_field :content %><br>
   <%= f.label :rating %>
-  <%= f.text_field :rating%>
+  <%= f.text_field :rating%> <br>
 
   <%= f.submit %>
 <% end %>
