Add link to edit profile for user story 58

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -4,3 +4,5 @@
 <p><%= @display_user.email %></p>
 <p><%= @display_user.address %></p>
 <p><%= @display_user.city %>, <%= @display_user.state %> <%= @display_user.zip %></p>
+<p><%= link_to "Edit #{@display_user.name} information.", "/admin/users/#{@display_user.id}/edit" %></p>
+<p><%= link_to "Edit #{@display_user.name} password.", "/admin/users/#{@display_user.id}/edit_password" %></p>
