Add view for story 57 cancel order if admin

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,1 +1,6 @@
 <%= render "/user/orders/show" %>
+<section id="order-cancel">
+  <% if !@order.shipped? && !@order.cancelled? %>
+    <%= button_to "Cancel Order", "/profile/orders/#{@order.id}", method: :patch %>
+  <% end %>
+</section>
