adds user development seeds

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,6 @@
 <h3><%= @user.email %></h3>
 <p><%= @user.address %></p>
 <p><%= @user.city %>, <%= @user.state %> <%= @user.zip %></p>
-<%= link_to "Edit Your Profile", "/profile/edit" %>
-<%= link_to "Edit Your Password", "/profile/edit_password" %>
-<%= link_to "My Orders", "/profile/orders" %>
+<%= link_to "Edit Your Profile", "/profile/edit" %> <br>
+<%= link_to "Edit Your Password", "/profile/edit_password" %><br>
+<%= link_to "My Orders", "/profile/orders" %><br>
