Adds merchant conditional to if statement verifications

--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -19,14 +19,14 @@
 
         <p>Active</p>
 
-        <%= link_to "Deactivate", "/merchant/items/#{item.id}/toggle_active", method: :patch if current_merchant_user? && current_employee?(@merchant.id) %>
+        <%= link_to "Deactivate", "/merchant/items/#{item.id}/toggle_active", method: :patch if @merchant && current_merchant_user? && current_employee?(@merchant.id) %>
       <% else %>
 
         <p>Inactive</p>
-        <%= link_to "Activate", "/merchant/items/#{item.id}/toggle_active", method: :patch if current_merchant_user? && current_employee?(@merchant.id) %>
+        <%= link_to "Activate", "/merchant/items/#{item.id}/toggle_active", method: :patch if @merchant && current_merchant_user? && current_employee?(@merchant.id) %>
       <% end %>
 
-      <% if current_merchant_user? && current_employee?(@merchant.id) %>
+      <% if @merchant && current_merchant_user? && current_employee?(@merchant.id) %>
           <p><%= link_to "Delete Item", merchant_dash_item_path(item), method: :delete if item.no_orders? %></p>
           <p><%= link_to "Edit Item", edit_merchant_dash_item_path(item) %> </p>
       <%end %>
