--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,21 +1,21 @@
-<% @users.each do |user| %>
-<center>
-<section id="user-<%=user.id%>">
-<h1><%= link_to "#{user.name}", "/admin/users/#{user.id}" %></h2>
-<h2>Registered at: <%= user.created_at %></h3>
-<h2>User Role: <%= user.role %></h3>
+<section class="grid-container">
+  <% @users.each do |user| %>
+    <section class="grid-item "id="user-<%=user.id%>">
+    <h1><%= link_to "#{user.name}", "/admin/users/#{user.id}" %></h1>
+    <h2>Registered at: <%= user.created_at %></h2>
+    <h2>User Role: <%= user.role %></h2>
 
-<h3>====User Info====</h3>
-<h4>E-mail: <%= user.email %></h4>
-<p>Address:</p>
-<p><%= user.address %></p>
-<p><%= user.city %>, <%= user.state %> <%= user.zip %></p>
-<% if user.active %>
-  <%= link_to "Deactivate User", "/admin/users/#{user.id}/toggle_active", method: :patch %>
-<% else %>
-  <%= link_to "Activate User", "/admin/users/#{user.id}/toggle_active", method: :patch %>
-<% end %>
-<h3>================</h3>
+    <h3>====User Info====</h3>
+      <h4>E-mail: <%= user.email %></h4>
+      <p>Address:</p>
+      <p><%= user.address %></p>
+      <p><%= user.city %>, <%= user.state %> <%= user.zip %></p>
+      <% if user.active %>
+        <%= link_to "Deactivate User", "/admin/users/#{user.id}/toggle_active", method: :patch %>
+      <% else %>
+        <%= link_to "Activate User", "/admin/users/#{user.id}/toggle_active", method: :patch %>
+      <% end %>
+    <h3>================</h3>
+    </section>
+  <% end %>
 </section>
-<% end %>
-<center>
