--- a/app/views/merchant/dashboard/_index.html.erb
+++ b/app/views/merchant/dashboard/_index.html.erb
@@ -6,7 +6,8 @@
 <section class="grid-container">
   <% @merchant.pending_orders.each do | order |%>
   <section class = "grid-item" id='order-<%= order.id%>'>
-    <p><%= link_to "Order ID: #{order.id}", "/merchant/orders/#{order.id}" %></p>
+    <p><%= link_to "Order ID: #{order.id}", "/merchant/orders/#{order.id}" if current_merchant_user? %></p>
+    <p><%= link_to "Order ID: #{order.id}", "/admin/users/#{order.user_id}/orders/#{order.id}" if current_admin_user? %></p>
     <p>Date Created: <%= order.created_at %></p>
     <p>Number of Items In Order: <%= order.quantity_ordered_from(@merchant) %></p>
     <p>Order Total: <%= number_to_currency(order.subtotal_from(@merchant)/100.to_f) %></p>
