--- a/app/views/user/orders/show.html.erb
+++ b/app/views/user/orders/show.html.erb
@@ -1,7 +1,7 @@
 <%= render "show" %>
 
 <section id="order-cancel">
-  <% if !@order.shipped? && !@order.cancelled? %>
-    <%= button_to "Cancel Order", "/profile/orders/#{@order.id}", method: :patch %>
+  <% if @order.pending? || @order.packaged? %>
+    <%= button_to "Cancel Order", "/profile/orders/#{@order.id}/cancel", method: :patch %>
   <% end %>
 </section>
