--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,8 +17,10 @@
       <% else %>
         <p style= "color:red">Inactive</p>
       <% end %>
-      <p><%= link_to "Edit Item", "/items/#{@item.id}/edit" %></p>
-      <p><%= link_to "Delete Item", "/items/#{@item.id}", method: :delete if @item.no_orders?%></p>
+      <% if current_employee?(@item.merchant) %>
+        <p><%= link_to "Edit Item", "/merchant/items/#{@item.id}/edit" %></p>
+        <p><%= link_to "Delete Item", "/merchant/items/#{@item.id}", method: :delete if @item.no_orders?%></p>
+      <% end %>
       <%= link_to "Add Review", "/items/#{@item.id}/reviews/new" %>
       <%= button_to "Add To Cart", "/cart/#{@item.id}", method: :post %>
     </section>
