Add admin link to all merchants

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   <body>
     <nav class = "topnav">
       <%= link_to "Home", "/" %>
-      <%= link_to "All Merchants", "/merchants"%>
+      <%= link_to "All Merchants", "/merchants" unless current_admin_user? %>
+      <%= link_to "All Merchants", "/admin/merchants" if current_admin_user? %>
       <%= link_to "All Items", "/items"%>
       <% if current_admin_user? %>
         <%= link_to "Admin Dashboard", "/admin" %>
