--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -15,7 +15,7 @@
       <p> <%= item.description unless @merchant%> </p>
       <p>Price: <%=number_to_currency(item.price/100.to_f) %> </p>
       <p>Inventory: <%= item.inventory %> </p>
-      <% if current_employee?(item.merchant)%>
+      <% if current_employee?(item.merchant) || current_admin_user? %>
         <% if item.active? %>
           <%= link_to "Deactivate", "/merchant/items/#{item.id}/toggle_active", method: :patch%>
         <% else %>
