Add admin ability to add item

--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -1,6 +1,6 @@
 <% if @merchant %>
   <h1><%= link_to @merchant.name, "/merchants/#{@merchant.id}"%><span> Items</span></h1>
-  <p align="center"><%= link_to "Add New Item", new_merchant_dash_item_path if current_employee?(@merchant)%></p>
+  <p align="center"><%= link_to "Add New Item", new_merchant_dash_item_path if current_employee?(@merchant) || current_admin_user? %></p>
 <% else %>
   <h1>All Items</h1>
 <% end %>
