--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,4 @@
 <%= link_to "Edit Your Profile", "/profile/edit" %>
 <%= link_to "Edit Your Password", "/profile/edit_password" %>
 <%= link_to "My Orders", "/profile/orders" %>
+Messages:  <%= link_to "#{@user.messages.count}", "/profile/messages" %>
